<resources>
    <string name="app_name">ListContacts</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="my_name">Ricardo Centeno</string>
    <string name="my_company">Mobintum</string>
    <string name="my_city">CD MX</string>
    <string name="img_description">default</string>
    <string name="tel">Tel:</string>
    <string name="email">Email:</string>
    <string name="github_user">Github:</string>
    <string name="twitter_user">Twitter:</string>
    <string name="back"><![CDATA[<--]]></string>
    <string name="next"><![CDATA[-->]]></string>
</resources>
